# Fitlink-Backend

./: package-lock.json
FitLink-Backend/: .env  README.md  fitlinkworkspace.code-workspace  pyproject.toml
FitLink-Backend/scripts/: test_reports.sh
FitLink-Backend/src/fitlink_backend/: auth.py  dependencies.py  main.py  supabase_client.py
FitLink-Backend/src/fitlink_backend/models/: ChatModels.py  UserCreate.py  UserLogin.py  UserResponse.py  UserSignUp.py
FitLink-Backend/src/fitlink_backend/routers/: chat.py  chat_match.py  events.py  intereses.py  notificaciones.py  scheduler.py  stats.py  success_events.py  suggestions.py  users.py
