[project]
name = "fitlink-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Valeriacarmonaf", email = "97414518+Valeriacarmonaf@users.noreply.github.com" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "python-dotenv>=1.0",
  "supabase>=2.6",
  "httpx>=0.27",
  "psycopg[binary]>=3.2"
]

[tool.poetry]
packages = [{ include = "fitlink_backend", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
